k8s/monitoring/prometheus/ingress/prometheus-ingress.yaml
kind: Middleware
apiVersion: traefik.io/v1alpha1
metadata:
  name: prom-stripprefix
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /prom
---
kind: Middleware
apiVersion: traefik.io/v1alpha1
metadata:
  name: prom-replaceprefix
  namespace: monitoring
spec:
  replacePathRegex:
    regex: ^/prom/(.*)
    replacement: /$1
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/prom`) || !PathPrefix(`/gno`)
    kind: Rule
    services:
    - name: prometheus-svc
      namespace: monitoring
      port: 8080
    middlewares:
    - name: prom-stripprefix
      namespace: monitoring
    - name: prom-replaceprefix
      namespace: monitoring
---
# apiVersion: v1 
# kind: Secret 
# metadata:
#   name: prometheus-secret 
#   namespace: monitoring
# data:
# # USe base64 in the certs
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZpVENDQkhHZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBRENCd0RFak1DRUdBMVVFQXhNYWFXNTAKWlhKdFpXUnBZWFJsTG5Ob1lXdGxjakkwTWk1c1lXSXhDekFKQmdOVkJBWVRBbFZUTVJFd0R3WURWUVFJRXdoVwphWEpuYVc1cFlURVFNQTRHQTFVRUJ4TUhRbkpwYzNSdmR6RXNNQ29HQTFVRUNoTWpVMGhCUzBWU01qUXlJRXhoCllpQkRaWEowYVdacFkyRjBaU0JCZFhSb2IzSnBkSGt4T1RBM0JnTlZCQXNUTUZOSVFVdEZVakkwTWlCTVlXSWcKU1c1MFpYSnRaV1JwWVhSbElFTmxjblJwWm1sallYUmxJRUYxZEdodmNtbDBlVEFlRncweE9URXdNVGN4TmpFMgpNekZhRncweU1URXd [...]
#   tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktrd2dnU2xBZ0VBQW9JQkFRRGxGbXpBV3RTT0lxdk0KSkJXdW5zRUhSbGtpejNSalIrSnU1NXQrSEJQb3lidnBWQkl5czFnemtvL0g2WTFrZnFrUkJTNllhUUczaVhEVwpoODM2U1Zzek1VQ1VLcG01eVlBclE3MHhiWk9NdElyNzVURyt6MVpEYlp4VTNueHpFd0d0M3dTdzk5UnRuOFZuCjl0SlNVcjQwcEdTK016YzNydk5QVlEyMmhhOWFBN0YvY1VwbG1lSmRSdkRWcndDTXZSSURyd1dURmNmRTdtS3EKMVJSRHFUOEROeXJ2UmZ5SW5vK2ZKRTFOZG5URUxjR1NhVmVqOFlVUU40djRYVGcvMmdybEg3WkVPVVc3L2hibwpReHo1WWV6NVJqbXA [...]
